<resources>
    <string name="app_name">干客</string>

    <string name="text">text</string>
    <string name="welcome_tips">做年轻人爱看的直播</string>
    <string name="tab_home">首页</string>
    <string name="tab_live">直播</string>
    <string name="tab_girl">妹子</string>
    <string name="tab_me">我的</string>

    <string name="tab_all">全部</string>

    <string name="search">搜索</string>

    <string name="press_again_to_exit">再按一次退出Gank</string>

    <string name="scoll_aware_fab_behavior">.view.ScollAwareFABBehavior</string>

    <!-- 房间内 -->
    <string name="room_chat">聊天</string>
    <string name="room_ranking">排行</string>
    <string name="room_anchor">主播</string>
    <string name="room_follow">关注</string>
    <string name="hint_room_chat">和主播说点什么…</string>
    <string name="tips_notice_desc">&#160;全民直播提倡绿色直播。封页和直播内容含吸烟，低俗，引诱，暴露等都将被封停账号。网警在线24小时巡查哦。</string>

    <string name="account_">全民号：</string>
    <string name="fans_">粉丝：</string>
    <string name="zhandouli_">战斗力：</string>
    <string name="l">|</string>
    <string name="live_notice">直播公告</string>
    <string name="start_live_time">开播时间</string>
    <string name="personal_information">个人资料</string>
    <string name="age">年龄</string>
    <string name="emotional_state">情感状态</string>
    <string name="location">所在地</string>
    <string name="occupation">职业</string>
    <string name="secrecy">保密</string>
    <string name="outer_space">外太空</string>
    <string name="qm_account">全民号 %1$s</string>
    <string name="fans_num">粉丝 %1$d</string>

    <!-- 我的关注 -->
    <string name="tips_current_not_login">当前未登录</string>
    <string name="btn_follow_click_login">点击登录，精彩不再错过</string>

    <!-- 我的 -->
    <string name="btn_click_login">点击登录</string>
    <string name="mine_follow">关注</string>
    <string name="mine_fans">粉丝</string>
    <string name="mine_recharge">充值</string>
    <string name="mine_starlight">我的星光</string>
    <string name="mine_contribution">星光贡献榜</string>
    <string name="mine_watch">观看历史</string>
    <string name="mine_level">我的等级</string>
    <string name="mine_task">任务中心</string>
    <string name="mine_game">游戏中心</string>
    <string name="mine_setting">设置</string>

    <!-- 登录 -->
    <string name="sign_up">注册</string>
    <string name="sign_up_and_login">注册并登录</string>
    <string name="lable_username_number">手机号</string>
    <string name="lable_password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="third_party_login">第三方登录</string>

    <!-- 推荐 -->
    <string name="recommend">推荐</string>
    <string name="recommend_more">更多</string>

    <!-- 搜索 -->
    <string name="hint_search">请输入主播昵称或全民号</string>
    <string name="tips_search_keywords_cannot_be_empty">搜索关键字不能为空</string>
    <string name="islive">正在直播</string>

    <string name="can_not_find_relevant_content">找不到你想要的内容，换个关键词试试！</string>
    <string name="no_more">没有更多了</string>
    <string name="network_unavailable">网络状态不佳</string>
    <string name="page_load_failed">加载失败…</string>
    <string name="swipe_down_to_refresh">下拉刷新数据</string>

    <string name="current_version_">KingTV %1$s</string>
    <string name="about">关于</string>
    <string name="author_">Author:</string>
    <string name="email_">Email:</string>
    <string name="csdn_">CSDN:</string>
    <string name="github_">Github:</string>


    <string name="title_home">主页</string>
    <string name="title_more">更多</string>
    <string name="title_me">我</string>
    <string name="favorite_tv">我的收藏</string>
    <string name="theme_tv">夜间模式</string>
    <string name="setting">设置</string>
    <string name="login_register">登录/注册</string>
    <string name="name_test">buhanzhe</string>
    <string name="inputAccount">请输入邮箱</string>
    <string name="inputPassword">请输入密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="inputName">请输入昵称</string>
    <string name="get_verifyCode">获取验证码</string>
    <string name="inputVerifyCode">请输入验证码</string>
    <string name="accessNewNotification">接受新通知</string>
    <string name="wifi_img_only">省流量模式</string>
    <string name="clear_cache">清除缓存</string>
    <string name="feed_back">意见反馈</string>
    <string name="wifi_img_only_small">仅在Wi-Fi环境下才会自动加载图片</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_copy">复制链接</string>
    <string name="menu_share">分享</string>
    <string name="logout">退出登录</string>
    <string name="do_logout">确认退出？</string>
    <string name="do_delete">确认删除？</string>
    <string name="sure">确认</string>
    <string name="do_clearCache">清除缓存后，下一次加载将消耗较多流量</string>
    <string name="clearCacheSuccess">清除缓存成功</string>
    <string name="clearCacheError">清除缓存失败</string>
    <string name="cacheInitSize">包括图片，网页等缓存，共 (0M)</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="delete_all">删除所有搜索记录</string>
    <string name="nextTime">下次再说</string>
    <string name="download">下载</string>
    <string name="goSetting">去设置</string>
    <string name="load_failed_me">加载失败，请点我重试</string>
    <string name="delete">删除</string>
    <string name="homePage_setting_tv">首页加载每日数据</string>
    <string name="title_recommend">推荐</string>
    <string name="title_everyday">每日</string>
    <string name="add_tag_tips">请选择您感兴趣的标签，至少3个！</string>
    <string name="tags_add">开始加载</string>
    <string name="atLeastTagTips">至少选择3个标签</string>
    <string name="syncData">本地数据同步</string>
    <string name="from_photo">来源：福利</string>
    <string name="who_photo">作者：Gank</string>
    <string name="click_load_more">点击为您推荐更多</string>
    <string name="photo_trasition">转场动画</string>
</resources>
